--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "jspdf": "^3.0.4",
     "lucide-react": "^0.561.0",
     "mongodb": "^6.3.0",
-    "next": "16.0.3",
+    "next": "^16.1.5",
     "next-cloudinary": "^6.5.0",
     "node-mailjet": "^6.0.11",
     "nodemailer": "^7.0.10",
