--- a/env.example
+++ b/env.example
@@ -79,6 +79,16 @@ SMS_ENABLED=true
 PO_RESPONSE_TOKEN_EXPIRY_DAYS=7
 
 # ============================================
+# ERROR REPORTING
+# ============================================
+# Email address to receive error reports
+ERROR_REPORT_EMAIL=qinalexander56@gmail.com
+# Enable/disable error reporting (true/false)
+ERROR_REPORT_ENABLED=true
+# Rate limit: maximum error reports per hour per user (optional)
+ERROR_REPORT_RATE_LIMIT=10
+
+# ============================================
 # APPLICATION CONFIGURATION
 # ============================================
 NEXT_PUBLIC_APP_ENV=development
